--- a/html/exchange/exchange.html
+++ b/html/exchange/exchange.html
@@ -6,7 +6,7 @@
         <div id="mithril-root"></div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mithril/1.1.1/mithril.js"></script>
-<script src="{% static "booster/js/Page.js" %}"></script>
+<script src="{% static "exchange/js/Page.js" %}"></script>
 <script>
     var root = document.getElementById('mithril-root');
     m.mount(root, Page);
