Basic search functionality frontend

--- a/html/exchange/exchange.html
+++ b/html/exchange/exchange.html
@@ -5,7 +5,9 @@
 <body>
         <div id="mithril-root"></div>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mithril/1.1.1/mithril.js"></script>
+<script src="{% static "exchange/js/mithril.js" %}"></script>
+<script src="{% static "exchange/js/inputsView.js" %}"></script>
+<script src="{% static "exchange/js/resultsView.js" %}"></script>
 <script src="{% static "exchange/js/App.js" %}"></script>
 <script>
     var root = document.getElementById('mithril-root');
