--- a/html/exchange/exchange.html
+++ b/html/exchange/exchange.html
@@ -1,5 +1,6 @@
 {% load static %}
 <meta charset="utf-8">
+<meta title="qconvo">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <!--<link href="{% static "exchange/css/exchange.css" %}" rel="stylesheet" type="text/css"/>-->
 <body>
