--- a/html/exchange/exchange.html
+++ b/html/exchange/exchange.html
@@ -7,6 +7,8 @@
         <div id="mithril-root"></div>
 </body>
 <script src="{% static "exchange/js/mithril.js" %}"></script>
+<script src="{% static "exchange/js/Ctrl.js" %}"></script>
+<script src="{% static "exchange/js/DataPopulator.js" %}"></script>
 <script src="{% static "exchange/js/inputsView.js" %}"></script>
 <script src="{% static "exchange/js/resultsView.js" %}"></script>
 <script src="{% static "exchange/js/App.js" %}"></script>
