Move some responsibilities from DataPopulator into ProfileFetcher

--- a/html/exchange/exchange.html
+++ b/html/exchange/exchange.html
@@ -7,7 +7,9 @@
         <div id="mithril-root"></div>
 </body>
 <script src="{% static "exchange/js/mithril.js" %}"></script>
+<script src="{% static "exchange/js/Model.js" %}"></script>
 <script src="{% static "exchange/js/Ctrl.js" %}"></script>
+<script src="{% static "exchange/js/ProfileFetcher.js" %}"></script>
 <script src="{% static "exchange/js/DataPopulator.js" %}"></script>
 <script src="{% static "exchange/js/inputsView.js" %}"></script>
 <script src="{% static "exchange/js/resultsView.js" %}"></script>
