Add frontend mithril routing and profile view page

--- a/html/exchange/exchange.html
+++ b/html/exchange/exchange.html
@@ -13,6 +13,7 @@
 <script src="{% static "exchange/js/DataPopulator.js" %}"></script>
 <script src="{% static "exchange/js/inputsView.js" %}"></script>
 <script src="{% static "exchange/js/resultsView.js" %}"></script>
+<script src="{% static "exchange/js/profileView.js" %}"></script>
 <script src="{% static "exchange/js/App.js" %}"></script>
 <script>
     var root = document.getElementById('mithril-root');
